# FireDocs

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
pdfjs/web/: custom-viewer-enhancements.css  viewer.html  viewer.mjs
pkg/: .SRCINFO  PKGBUILD
pkg/FireDoc/: config  packed-refs
pkg/FireDoc/objects/pack/: pack-039be110e2e9ea447958feda23f7d96e0ddfe43c.idx  pack-039be110e2e9ea447958feda23f7d96e0ddfe43c.rev
pkg/FireDocs/: config  packed-refs
pkg/FireDocs/objects/pack/: pack-b9e99ecaf6366f616d723484e3ea3c33bdaf71f2.idx  pack-b9e99ecaf6366f616d723484e3ea3c33bdaf71f2.rev
pkg/firedoc/: .BUILDINFO  .MTREE  .PKGINFO
pkg/firedoc-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/firedoc/usr/share/applications/: firedoc.desktop
src-electron/: main.cjs  preload.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: firedoc.desktop  homepage.html  pdf-loader.js
web/pdfjs/web/: custom-viewer-enhancements.css  custom-viewer-enhancements.js  viewer.css  viewer.html  viewer.mjs
