[package]
name = "firedoc"
version = "3.1.0"
description = "FireDoc: Minimalist PDF Viewer"
authors = ["ZeNx98"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
percent-encoding = "2.3"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.18"
futures = "0.3"
base64 = "0.22.1"
wry = { version = "0.24", features = ["webkit2gtk-4.1"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
