[package]
name = "firedoc"
version = "3.2.1"
description = "FireDoc: Minimalist PDF Viewer"
authors = ["ZeNx98"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tokio = { version = "1", features = ["full"] }
url = "2.5"
percent-encoding = "2.3"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.18"
futures = "0.3"
base64 = "0.22.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
